[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/CompassPro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Music/Forró Estilizado.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Background/inicio_opcoes.png" type="Texture" id=4]
[ext_resource path="res://Assets/Items/voltar.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Fonts/CompassPro.ttf"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/Fonts/CompassPro.ttf"

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = SubResource( 4 )

[node name="SettingsMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -16.0
margin_right = 656.0
margin_bottom = 400.0
texture = ExtResource( 4 )
expand = true

[node name="SettingsLabel" type="Label" parent="."]
anchor_right = 0.5
margin_left = 160.0
margin_top = 32.0
margin_right = 480.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.819608, 0.772549, 0.0823529, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "OPÇÕES"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="."]
margin_top = 80.0
margin_right = 256.0
margin_bottom = 368.0

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_top = 93.0
margin_right = 176.0
margin_bottom = 368.0

[node name="AudioLabel" type="Label" parent="MainContainer"]
margin_right = 176.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Áudio"
align = 1

[node name="LanguageLabel" type="Label" parent="MainContainer"]
margin_top = 23.0
margin_right = 176.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Idioma"
align = 1

[node name="ControlsLabel" type="Label" parent="MainContainer"]
margin_top = 46.0
margin_right = 176.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Controles"
align = 1

[node name="VideoLabe" type="Label" parent="MainContainer"]
margin_top = 69.0
margin_right = 176.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
text = "Vídeo"
align = 1

[node name="SettingsAudioContainer" type="VBoxContainer" parent="."]
margin_left = 240.0
margin_top = 92.0
margin_right = 528.0
margin_bottom = 368.0

[node name="MusicVolumeLabel" type="Label" parent="SettingsAudioContainer"]
margin_right = 288.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "Volume da Música"
align = 1

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsAudioContainer"]
modulate = Color( 0.992157, 0.905882, 0.027451, 1 )
margin_top = 23.0
margin_right = 288.0
margin_bottom = 39.0
max_value = 15.0

[node name="BackButton" type="Button" parent="."]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
autoplay = true
mix_target = 1

[connection signal="value_changed" from="SettingsAudioContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
